Oct 08, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- Q3 protocol 68

Oct 06, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- clean up sound code
- increased version to 0.9.9.2 to make UT2003 server lists visible.
  Note for those using the CVS Version: You need a qstat that supports 'ut2s'
  as gametype. You can generate a suitable config file at
  http://qstat.uglypunk.com/. Keep in mind that you may have to remove the file
  when a new qstat version is released!

Oct 04, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- modified that ugly ut2 master hack a little

Oct 04, 2002: Alex Burger <alex@fragit_dot_net>
- Added support for UT 2003 http masters (not the same as the other
  http formats) and added full and demo Epic masters
- Fixed UT 2003 password column (servers use password=0/1 instead of
  password=False/True)
- Added sound enable/disable button

Oct 03, 2002: Alex Burger <alex@fragit_dot_net>
- Added sound support actions for: xqf start, xqf quit, update, refresh,
  stop, server connect, redial success.  Added Preferences / Sound Options.
  If file does not start with a / (except for Player), prepends user's
  config folder (~/.qf/)

Oct 03, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- add popup while redialing

Oct 03, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- rename Unreal 2003 Demo -> UT 2003

Oct 01, 2002: Alex Burger <alex@fragit_dot_net>
- Update status bar for redial

Oct 01, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
- fix segfault because of format error and some cast warnings
- use q3 parse and launch functions for SOF2
- reinsert signal handlers for changing debug level
- set sensitivity of cancel redial button

Sep 30, 2002: Alex Burger <alex@fragit_dot_net>
- Added busy server redial.  Server - Cancel Redial to stop

Sep 29, 2002: Alex Burger <alex@fragit_dot_net>
- Added Soldier of Fortune 2 support and master

Sep 27, 2002: Ludwig Nussel <l-n@users.sourceforge.net>