@@ -1,3 +1,10 @@
+Oct 04, 2002: Alex Burger <alex@fragit_dot_net>
+- Added Preferences Appearance option of 'Show only configured games'.
+  Masters added will still be stored, but only displayed on the screen
+  if the command line for the game is configured.  Defaults to false.
+  I was tired of scrolling past games I don't have.
+- Changed source_ctree_remove_master_group() to not be static.
+
 Oct 08, 2002: Ludwig Nussel <l-n@users.sourceforge.net>
 - Q3 protocol 68
 
